--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.24.1",
-    "webpack": "^1.12.13"
+    "webpack": "^1.12.13",
+    "braces": ">=2.3.1"
   }
 }
